# cookiecutter-pypackage

./: .travis.yml  CONTRIBUTING.md  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.trunk/: trunk.yaml
docs/: conf.py  console_script_setup.md  prompts.md  pypi_release_checklist.md  travis_pypi_setup.md  troubleshooting.md  tutorial.md
hooks/: post_gen_project.sh  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: AUTHORS.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/.scripts/: coverage.sh
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
