[project]
name = "{{ }}"
version = "0.1.0"
description = "{{ cookiecutter. }}"
authors = [{ name = "{{ cookiecutter. }}", email = "{{ cookiecutter. }}" }]
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }
dependencies = []

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
